--- a/gratte.adoc
+++ b/gratte.adoc
@@ -1,13 +1,24 @@
 = Grottesången
 
-Skjold hette Odens son, som skjoldungarne äro komna ifrån; han hade sitt säte och härskade över landet där, som det nu kallas Danmark men då kallades Gotland. Skjold hade en son, som hette Fridleiv och som rådde över landet efter honom. Fridleivs son hette Frode, han tog konungadömet efter sin fader, på den tid, då kejsar Augustus lyste frid över all världen; då blev Kristus född. Men därför att Frode var mäktigast av alla konungar i nordanlanden, så tillskrevs honom friden över hela danska språkområdet, och nordmännen kalla den Frodefriden. Ingen man skadade den andre, fast han träffade sin faders eller broders baneman lös eller bunden; då var icke heller någon tjuv eller rånare, så att en guldring länge låg på Jalangrs hed.
+Skjold hette Odens son, som skjoldungarne äro komna ifrån; han hade sitt säte och härskade över landet där, som det nu kallas Danmark men då kallades Gotland.
+Skjold hade en son, som hette Fridleiv och som rådde över landet efter honom.
+Fridleivs son hette Frode, han tog konungadömet efter sin fader, på den tid, då kejsar Augustus lyste frid över all världen; då blev Kristus född.
+Men därför att Frode var mäktigast av alla konungar i nordanlanden, så tillskrevs honom friden över hela danska språkområdet, och nordmännen kalla den Frodefriden.
+Ingen man skadade den andre, fast han träffade sin faders eller broders baneman lös eller bunden; då var icke heller någon tjuv eller rånare, så att en guldring länge låg på Jalangrs hed.
 
-Konung Frode gästade i Sverge hos den konung, som kallas Fjolner; då köpte han två trälkvinnor, som hette Fenja och Menja; de voro stora och starka. På den tiden funnos i Danmark två kvarnstenar, så stora, att ingen var så stark, att han kunde draga dem, och den egenskapen var hos kvarnstenarne, att det maldes på kvarnen, som den uttalade önskan om, som malde. Denna kvarn hette Grotte; Hengikjopt kallas den, som gav kvarnen åt konung Frode.
+Konung Frode gästade i Sverge hos den konung, som kallas Fjolner; då köpte han två trälkvinnor, som hette Fenja och Menja; de voro stora och starka.
+På den tiden funnos i Danmark två kvarnstenar, så stora, att ingen var så stark, att han kunde draga dem, och den egenskapen var hos kvarnstenarne, att det maldes på kvarnen, som den uttalade önskan om, som malde.
+Denna kvarn hette Grotte; Hengikjopt kallas den, som gav kvarnen åt konung Frode.
 
-Konung Frode lät leda trälkvinnorna till kvarnen och bad dem mala guld och frid och lycka åt Frode. Då gav han dem icke längre vila eller sömn, än göken teg eller en visa kunde sjungas. Då säges, att de framsade den sång, som kallas Grottesången, och innan de slutade kvädet, malde de en här åt Frode, så att under den natten kom den sjökonung, som hette Mysing, dit och dödade Frode och tog där stort byte. Då slutade Frodefriden.
+Konung Frode lät leda trälkvinnorna till kvarnen och bad dem mala guld och frid och lycka åt Frode.
+Då gav han dem icke längre vila eller sömn, än göken teg eller en visa kunde sjungas.
+Då säges, att de framsade den sång, som kallas Grottesången, och innan de slutade kvädet, malde de en här åt Frode, så att under den natten kom den sjökonung, som hette Mysing, dit och dödade Frode och tog där stort byte.
+Då slutade Frodefriden.
 
-Mysing tog med sig Grotte och likaledes Fenja och Menja och bad dem mala salt, och vid midnatt frågade de, om icke Mysing vore mätt på salt, men han bad dem mala längre. De malde blott en liten stund, innan skeppen sjönko ned, och därefter var en strömvirvel i havet, då sjön faller in i kvarnögat; då blev havet salt.
+Mysing tog med sig Grotte och likaledes Fenja och Menja och bad dem mala salt, och vid midnatt frågade de, om icke Mysing vore mätt på salt, men han bad dem mala längre.
+De malde blott en liten stund, innan skeppen sjönko ned, och därefter var en strömvirvel i havet, då sjön faller in i kvarnögat; då blev havet salt.
 
+[verse]
 1. Nu äro komna 
 till konungens hus 
 tvänne framsynta, 
@@ -17,6 +28,7 @@ Fridleivs son,
 de mäktiga möarna, 
 manade i träldom.
 
+[verse]
 2. Där blevo de ledda 
 till lådan för kvarnstenen, 
 bådo gråa stenen 
@@ -26,6 +38,7 @@ han unnade och glädje,
 förrän till honom trängde 
 tärnornas ljudande.
 
+[verse]
 3. De mumlade bullret av kvarnen, 
 som brutit sin tystnad: 
 »Läggom dem i lådan, 
@@ -33,6 +46,7 @@ lyftom stenarne!»
 Än mer bad han möarne, 
 att de mala skulle.
 
+[verse]
 4. De sjöngo och svängde 
 de snurrande stenarne, 
 så att de flesta somnade 
@@ -40,6 +54,7 @@ av Frodes trälar.
 Då sade Menja, 
 som till mäld hade kommit.
 
+[verse]
 5. »Må vi mala åt Frode 
 mycken rikedom, 
 fullt upp av gods 
@@ -49,6 +64,7 @@ sove han å dun!
 Må han vakna med välbehag! 
 Väl är då malet.
 
+[verse]
 6. Här skall ingen 
 den andre skada, 
 ont anstifta 
@@ -58,6 +74,7 @@ med sitt drabbande svärd,
 fast sin broders baneman 
 bunden han finner.»
 
+[verse]
 7. Det första ord, 
 han yttrade, var: 
 »Soven, I två, 
@@ -65,6 +82,7 @@ ej i taget ens som göken
 eller längre än så, 
 att jag säger en strof!»
 
+[verse]
 8. »Till fullo förståndig 
 du, Frode, ej var, 
 du, förtrolig att tala med, 
@@ -74,6 +92,7 @@ du valde och styrka,
 men härkomsten 
 hörde du ej efter.
 
+[verse]
 9. Hård var Rungner 
 och hans fader, 
 mäktig var Tjatse 
@@ -83,6 +102,7 @@ Ide och Orner,
 bergresars bröder, 
 barn av dem vi äro.
 
+[verse]
 10. Ej Grotte kommit 
 ur gråa fjället 
 eller den hårda 
@@ -92,6 +112,7 @@ malde så,
 hade ej hon 
 förhäxad blivit.
 
+[verse]
 11. Nio vintrar 
 voro vi leksystrar 
 djupt under jorden 
@@ -101,6 +122,7 @@ sig vinnlade möarna,
 flyttade ensamma 
 fjäll ur stället.
 
+[verse]
 12. Vi vältade sten 
 över stängslet för jättehem, 
 så att jorden sköts 
@@ -110,6 +132,7 @@ de snurrande stenar,
 de tunga hällar, 
 att de togos av människor.
 
+[verse]
 13. Sedan vi två 
 i Svitjods land, 
 framsynta flickor, 
@@ -119,6 +142,7 @@ och bröto sköldar,
 banade oss väg 
 genom brynjade grå.
 
+[verse]
 14. Störtade en furste, 
 stödde en annan, 
 den gode Guttorm 
@@ -126,6 +150,7 @@ vi gåvo hjälp,
 det kom ej lugn, 
 förrän Knue föll.
 
+[verse]
 15. Dessa halvår 
 vi höllo så på, 
 att vi som kämpar 
@@ -135,6 +160,7 @@ med skarpa spjut
 blod ur dödliga sår 
 och svärden färgade.
 
+[verse]
 16 Nu äro vi komna 
 till konungens hus, 
 i tröstlöst tillstånd 
@@ -147,6 +173,7 @@ dystert är hos Frode.
 .Grottekvarnen
 image::ed0045.jpg[]
 
+[verse]
 17. Händerna skola vila, 
 hällen skall stanna, 
 malit har jag nu 
@@ -156,6 +183,7 @@ väntar ej händerna,
 förrän för Frode 
 fullmalet tyckes.
 
+[verse]
 18. Händer skola hålla 
 hårda yxor, 
 hantera blodiga vapen. 
@@ -165,6 +193,7 @@ vill du lyssna
 till våra sånger 
 och sagor från forntid.
 
+[verse]
 19. Eld ser jag brinna 
 österut från borgen, 
 stridsbud vaka, 
@@ -174,6 +203,7 @@ i hast komma
 och bränna upp 
 boningen för fursten.
 
+[verse]
 20. Ej länge skall du inneha 
 Lejres kungatron, 
 röda ringar 
@@ -183,6 +213,7 @@ tärna, stadigare!
 Ej varma vi äro 
 i valplatsens blod.
 
+[verse]
 21. Min faders mö 
 malde kraftigt, 
 ty hon förutsåg åt många 
@@ -192,6 +223,7 @@ stolparne sprungo,
 slitna från järnet. 
 Slutom ej att mala!
 
+[verse]
 22. Malom än mera! 
 Han vars moder är Yrsa, 
 för Halvdans dråp 
@@ -201,6 +233,7 @@ heta skall både
 barn och broder; 
 vi båda det veta.
 
+[verse]
 23. Möarne malde, 
 förmågan brukade 
 - unga de voro - 
@@ -210,10 +243,10 @@ kvarnen sköts ned,
 den tunga hallen 
 i tu stycken brast.
 
+[verse]
 24. Men bergresarnes 
 brud då sade: 
 »Malit ha vi, Frode 
 och må vi nu sluta; 
 möarne tillräckligt 
 vid mälden ha stått.»
-
