--- a/groas.adoc
+++ b/groas.adoc
@@ -1,6 +1,8 @@
 = Groas trollsång
 
-Sonen sade: 
+Sonen sade:
+
+[verse]
 1. »Vakna nu, Groa! 
 Vakna, goda kvinna! 
 Dig jag väcker vid de dödas dörrar, 
@@ -8,7 +10,9 @@ om du minnes det,
 att du manade din son 
 att komma till kumlet vid din grav.»
 
-Modern sade: 
+Modern sade:
+
+[verse]
 2. »Vad angeläget har 
 min enda son? 
 Vad ont har överfallit dig, 
@@ -16,7 +20,9 @@ då din moder du kallar,
 som i mullen är kommen 
 och ur människors värld har vandrat?»
 
-Sonen sade: 
+Sonen sade:
+
+[verse]
 3. »Ett styggt spelbord 
 ställde åt mig onda kvinnan, 
 hon som famnade min fader, 
@@ -24,7 +30,9 @@ då hon bjöd mig vandra,
 dit man vet är omöjligt, 
 till möte med Menglod.»
 
-Modern sade: 
+Modern sade:
+
+[verse]
 4. »Lång är färden, 
 farvägar långa, 
 lång är människors längtan. 
@@ -32,7 +40,9 @@ Om det varder så,
 att din vilja du får, 
 efter nornors skön det då sker.»
 
-Sonen sade: 
+Sonen sade:
+
+[verse]
 »Sjung för mig galdrar, 
 som goda äro! 
 Bärga, moder, ditt barn! 
@@ -40,7 +50,9 @@ Jag är rädd, att på vägen
 jag råkar i olycka. 
 En yngling för ung jag är.»
 
-Modern sade: 
+Modern sade:
+
+[verse]
 »Jag sjunger dig den första, 
 som man fördelaktig säger 
 - den sjöng Rane för Rind - 
@@ -48,6 +60,7 @@ att från axeln du skjuter,
 vad dig elakt tyckes. 
 Led du själv dig själv!
 
+[verse]
 7. Den andra jag dig sjunger, 
 om ute på vägar 
 du skall utan glädje gå. 
@@ -55,6 +68,7 @@ Nornans huldhet
 dig hägne överallt, 
 fast du dig smädad ser!
 
+[verse]
 8. Jag sjunger dig den tredje, 
 om sjudande älvar 
 dig forsa till livets förlust. 
@@ -62,6 +76,7 @@ Horn och Rud hädan
 till Hel strömma, 
 men städs minskas de må för dig!
 
+[verse]
 9. Den fjärde jag dig sjunger, 
 om fiender stå 
 färdiga att föra dig till galgen. 
@@ -69,6 +84,7 @@ Deras håg må sig ändra
 till hugnad för dig, 
 deras sinne till vänskap sig vända!
 
+[verse]
 10. Den femte jag dig sjunger, 
 om fjättrar bliva 
 dig bundna om armar och ben. 
@@ -77,6 +93,7 @@ framför läggen sjungas,
 låset då av lemmarna springer, 
 och ifrån fötterna fjättern.
 
+[verse]
 11. Den sjätte jag dig sjunger, 
 om i sjögång du kommer 
 varre, än någon vet. 
@@ -84,6 +101,7 @@ Lugn på sjö
 i ditt skepp må komma 
 och förläne dig fridsäll färd!
 
+[verse]
 12. Den sjunde jag dig sjunger, 
 om med skärpa dig kniper 
 frosten på höga fjället. 
@@ -91,6 +109,7 @@ Må likens kyla
 ditt kött ej fördärva! 
 Må hullet vid lemmarne hållas!
 
+[verse]
 13. Jag sjunger dig den åttonde, 
 om på skymningens väg 
 du nås av natten ute, 
@@ -98,6 +117,7 @@ att dess mindre måtte
 dig men göra 
 en kristen död kvinna.
 
+[verse]
 14. Jag sjunger dig den nionde, 
 om du skiftar ord 
 med resen, som rosar sig av vapen. 
@@ -105,6 +125,7 @@ Må mål och mannavett
 i minne och hjärta 
 dig givas nog att dig hjälpa!
 
+[verse]
 15. Far du nu aldrig, 
 där fara är uppenbar, 
 och må ogagn din älskog ej hindra! 
@@ -112,6 +133,7 @@ På jordfast sten
 jag stod inom dörrgången, 
 medan dig trollsång jag täljde.
 
+[verse]
 16. Bär med dig härifrån 
 din moders ord, son, 
 och låt dem bo i ditt bröst, 
