--- a/helge3.adoc
+++ b/helge3.adoc
@@ -4,10 +4,15 @@
 
 Konung Sigmund, Volsungs son, hade Borghild av Bralund till äkta; de kallade sin son Helge och efter Helge Hjorvardsson; Hagal fostrade Helge.
 
-Hunding hette en mäktig konung, och efter honom är Hundland uppkallat. Han var en stor krigare och hade många söner, som voro i härnad. Ofrid och fiendskap var emellan konung Hunding och konung Sigmund, bådadera dräpte den andres fränder. Konung Sigmund och hans ättmän hette volsungar och ylvingar.
+Hunding hette en mäktig konung, och efter honom är Hundland uppkallat.
+Han var en stor krigare och hade många söner, som voro i härnad.
+Ofrid och fiendskap var emellan konung Hunding och konung Sigmund, bådadera dräpte den andres fränder.
+Konung Sigmund och hans ättmän hette volsungar och ylvingar.
 
-Helge for hemligen till konung Hundings hov och spejade; konung Hundings son Häming var hemma. Men när Helge begav sig bort, träffade han en herdegosse och sade:
+Helge for hemligen till konung Hundings hov och spejade; konung Hundings son Häming var hemma.
+Men när Helge begav sig bort, träffade han en herdegosse och sade:
 
+[verse]
 1. »Säg du åt Heming, 
 att Helge minnes, 
 vem i brynja 
@@ -17,8 +22,11 @@ inne ni hade,
 som kung Hunding höll 
 för att Hamal vara.»
 
-Hamal hette Hagals son. Konung Hunding sände män till Hagal för att leta efter Helge, men Helge kunde icke skydda sig på annat sätt än att han tog en tjänstekvinnas kläder och gick att mala. De letade och funno icke Helge; då sade Blind den illistige:
+Hamal hette Hagals son.
+Konung Hunding sände män till Hagal för att leta efter Helge, men Helge kunde icke skydda sig på annat sätt än att han tog en tjänstekvinnas kläder och gick att mala.
+De letade och funno icke Helge; då sade Blind den illistige:
 
+[verse]
 2. »Hagals trälkvinnas ögon 
 te sig vassa, 
 ej bondens ätt är det, 
@@ -26,6 +34,7 @@ som bullrar vid kvarnen;
 stenarne rämna, 
 i stycken springer lådan.
 
+[verse]
 3. Hård lott har nu 
 hövdingen fått, 
 då korn från Valland 
@@ -35,7 +44,9 @@ dugde bättre
 än kvarnens handtag 
 att hålla svärdet.»
 
-Hagal svarade och sade: 
+Hagal svarade och sade:
+
+[verse]
 4. »Om lådan larmar 
 är litet under, 
 då konungadottern 
@@ -51,10 +62,13 @@ till Sigar och Hogne,
 därför elaka ögon 
 har ylvingatärnan.»
 
-Helge kom undan och gick på härskepp; han fällde konung Hunding och kallades sedan Helge Hundingsbane. Han låg med sin här i Brunavag och gjorde där strandhugg, och de åto där rått kött.
+Helge kom undan och gick på härskepp; han fällde konung Hunding och kallades sedan Helge Hundingsbane.
+Han låg med sin här i Brunavag och gjorde där strandhugg, och de åto där rått kött.
 
-En konung hette Hogne; hans dotter var Sigrun, hon var valkyria och red i luft och över hav; hon var Svava pånyttfödd. Sigrun red till Helges skepp och sade:
+En konung hette Hogne; hans dotter var Sigrun, hon var valkyria och red i luft och över hav; hon var Svava pånyttfödd.
+Sigrun red till Helges skepp och sade:
 
+[verse]
 5. »Vilka låta fartyg 
 flyta vid stranden? 
 Var hören I, krigare, 
@@ -64,7 +78,9 @@ i Brunavåg?
 Vart lyster eder 
 att leden känna?»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 6. »Hamal låter fartyg 
 flyta vid stranden; 
 i Lässö höra vi 
@@ -74,7 +90,9 @@ i Brunavåg;
 österut lyster oss 
 att leden känna.»
 
-Sigrun sade: 
+Sigrun sade:
+
+[verse]
 7. »Var har du, furste, 
 vapen prövat 
 eller valplatsens fåglar 
@@ -84,7 +102,9 @@ med blod bestänkt?
 Vi äta hjälmklädda kämpar 
 köttet rått?»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 8. »Det utförde ylvingars 
 ättling nyss 
 väster om havet, 
@@ -94,12 +114,15 @@ i Bragalunden
 och örnens ätt 
 med uddarne mättade.
 
+[verse]
 9. Nu orsaken, mö, 
 är yppad därtill; 
 stekt därför föga 
 vi fingo på havet.»
 
-Sigrun sade: 
+Sigrun sade:
+
+[verse]
 10. »Dråp ger du tillkänna; 
 död måste på valplatsen 
 konung Hunding 
@@ -109,7 +132,9 @@ då släkt I hämnaden,
 och blod sprutade 
 på spetsen av svärdet.»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 11. »Hur visste du, 
 att vi voro de, 
 snabbtänkta mö, 
@@ -119,7 +144,9 @@ djärva äro
 och snarlika 
 släktingar till oss.»
 
-Sigrun sade: 
+Sigrun sade:
+
+[verse]
 12. »Ej var jag fjärran, 
 du folkets hövding, 
 i går på morgonen 
@@ -129,6 +156,7 @@ slug jag anser,
 då i dunkla ord 
 du döljer din bragd.
 
+[verse]
 13. Förr en gång såg jag dig 
 fara på långskepp, 
 när du stod och stred 
@@ -140,8 +168,14 @@ dölja för mig,
 men Hognes mö 
 Helge känner.»
 
-Granmar hette en mäktig konung, som bodde vid Svarinshaug; han ägde många söner: en hette Hodbrodd, en annan Gudmund, den tredje Starkad. Hodbrodd var på kungastämma, han förlovade med sig Sigrun, Hognes dotter. Men när hon får veta det, red hon med valkyrior genom luft och över hav att söka efter Helge. Helge var då vid Logafjällen och hade stridit med Hundings söner. Där fällde han då Alf och Eyjolv, Hjorvard och Hervard och var mycket trött av striden och satt vid foten av Arastein. Där träffade honom Sigrun och kastade sig om halsen på honom och kysste honom och sade honom sitt ärende, såsom det säges i den gamla Volsungakvida:
+Granmar hette en mäktig konung, som bodde vid Svarinshaug; han ägde många söner: en hette Hodbrodd, en annan Gudmund, den tredje Starkad.
+Hodbrodd var på kungastämma, han förlovade med sig Sigrun, Hognes dotter.
+Men när hon får veta det, red hon med valkyrior genom luft och över hav att söka efter Helge.
+Helge var då vid Logafjällen och hade stridit med Hundings söner.
+Där fällde han då Alf och Eyjolv, Hjorvard och Hervard och var mycket trött av striden och satt vid foten av Arastein.
+Där träffade honom Sigrun och kastade sig om halsen på honom och kysste honom och sade honom sitt ärende, såsom det säges i den gamla Volsungakvida:
 
+[verse]
 14. Sigrun sökte 
 segerglad furste, 
 fattade Helges 
@@ -151,11 +185,13 @@ härskaren i hjälm;
 kärlek då fattade 
 fursten till vivet.
 
+[verse]
 15. Hon sade sig älska 
 av all sin håg 
 Sigmunds son, 
 innan hon sett honom.
 
+[verse]
 16. »Med Hodbrodd blev jag 
 i hären förlovad, 
 men en annan ädling 
@@ -165,12 +201,15 @@ mina fränders vrede,
 mot min faders egen 
 önskan jag brutit.»
 
+[verse]
 17. Ej Hognes dotter 
 dolde sina tankar, 
 sade Helges huldhet 
 sig hava önska.
 
-Helge sade: 
+Helge sade:
+
+[verse]
 18. »Vårda dig icke 
 om vreden hos Hogne 
 eller oviljan 
@@ -180,8 +219,13 @@ hos mig leva;
 dina fränder, du goda, 
 fruktar jag icke.»
 
-Helge samlade då en stor flotta och for till Frekastein och de fingo på havet en livsfarlig storm; då ljungade blixtar över dem, och strålarna gingo ned i skeppen. De sågo i luften, att nio valkyrior redo, och de kände Sigrun; då stillade sig stormen, och de kommo helbrägda till land. Granmars söner sutto på ett berg, då skeppen seglade åt land. Gudmund hoppade upp på en häst och red för att speja upp på berget vid hamnen; då bärgade volsungarne seglen. Då sade Gudmund, Granmars son:
+Helge samlade då en stor flotta och for till Frekastein och de fingo på havet en livsfarlig storm; då ljungade blixtar över dem, och strålarna gingo ned i skeppen.
+De sågo i luften, att nio valkyrior redo, och de kände Sigrun; då stillade sig stormen, och de kommo helbrägda till land.
+Granmars söner sutto på ett berg, då skeppen seglade åt land.
+Gudmund hoppade upp på en häst och red för att speja upp på berget vid hamnen; då bärgade volsungarne seglen.
+Då sade Gudmund, Granmars son:
 
+[verse]
 19. »Vem är den sköldung, 
 som skeppen styr, 
 och gyllene stridsfana 
@@ -191,7 +235,9 @@ i främsta spetsen,
 kring vikingar blodsrodnad 
 blänker i skyn.»
 
-Sinfjotle sade: 
+Sinfjotle sade:
+
+[verse]
 20. »Här må Hodbrodd 
 Helge känna, 
 den till flykt tröge, 
@@ -201,7 +247,9 @@ han under sig tvungit,
 fjorsungaarvet 
 med fejd vunnit.»
 
-Gudmund sade: 
+Gudmund sade:
+
+[verse]
 21. »Dess förr vi skola 
 vid Frekastein 
 sams till samman 
@@ -211,7 +259,9 @@ hämnd att vinna,
 om den lägsta lotten 
 vi länge fingo.»
 
-Sinfjotle sade: 
+Sinfjotle sade:
+
+[verse]
 22. »Förr skall du, Gudmund, 
 fösa getter 
 och i branta 
@@ -221,7 +271,9 @@ en hasselpåk;
 det ser du hellre 
 än svärdets domar.»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 23. »Det synes dig bättre, 
 Sinfjotle, passa 
 att gå i strid 
@@ -231,6 +283,7 @@ ord att tvista,
 om än hätskhet 
 härskarne skiljer.
 
+[verse]
 24. Ej goda tyckas mig 
 Granmars söner 
 men sanning dock höves 
@@ -242,8 +295,13 @@ svärden mod,
 mycket käcka 
 kämpar de äro.»
 
-Gudmund red hem med krigsbud; då samlade Granmars söner en här. Med kommo många konungar, där var Hogne, Sigruns fader, och hans söner Brage och Dag. Där var stor strid, och alla Granmars söner föllo och alla deras hövdingar utom Dag Hognesson, som fick fred och svor volsungarne eder. Sigrun gick ut bland de fallne och träffade Hodbrodd nära döden. Hon sade:
+Gudmund red hem med krigsbud; då samlade Granmars söner en här.
+Med kommo många konungar, där var Hogne, Sigruns fader, och hans söner Brage och Dag.
+Där var stor strid, och alla Granmars söner föllo och alla deras hövdingar utom Dag Hognesson, som fick fred och svor volsungarne eder.
+Sigrun gick ut bland de fallne och träffade Hodbrodd nära döden.
+Hon sade:
 
+[verse]
 25. »Icke skall Sigrun 
 från Sevafjällen, 
 konung Hodbrodd, 
@@ -255,7 +313,9 @@ ulvaflocken grå
 
 Då träffade hon Helge och blev mycket glad.
 
-Han sade: 
+Han sade:
+
+[verse]
 26. »Ej allt, du kloka, 
 blev idel lycka, 
 dock säger jag, att nornorna 
@@ -265,6 +325,7 @@ vid Frekastein
 Brage och Hogne; 
 deras baneman var jag.
 
+[verse]
 27. Rollaugs söner livet 
 vid Lebjorg miste, 
 men konung Starkad 
@@ -274,6 +335,7 @@ väsen jag sett,
 då bålen slogs, 
 fast borta var huvudet.
 
+[verse]
 28. De allra flesta 
 av fränderna dina 
 ligga på jorden, 
@@ -283,18 +345,25 @@ det kom på din lott,
 att för stormän 
 till strid du blev.»
 
+[verse]
 29. Da grät Sigrun. Han sade: 
 »Trösta dig, Sigrun! 
 Ett tvistefrö du varit oss. 
 ej sköldungar skickelsen motstå.»
 
-Sigrun sade: 
+Sigrun sade:
+
+[verse]
 »Jag önskade, de levde 
 de som avlidna äro, 
 finge i din famn jag dock slutas.»
 
-Helge äktade Sigrun, och de fingo söner; Helge var då ej gammal. Dag Hognesson blotade till Oden om hämnd för sin fader, och Oden lånade Dag sitt spjut. Dag träffade sin svåger Helge på det ställe, som heter Fjoturlund; han rände igenom Helge med spjutet. Där föll Helge, men Dag red till Sevafjällen och sade Sigrun nyheten:
+Helge äktade Sigrun, och de fingo söner; Helge var då ej gammal.
+Dag Hognesson blotade till Oden om hämnd för sin fader, och Oden lånade Dag sitt spjut.
+Dag träffade sin svåger Helge på det ställe, som heter Fjoturlund; han rände igenom Helge med spjutet.
+Där föll Helge, men Dag red till Sevafjällen och sade Sigrun nyheten:
 
+[verse]
 30. »Sen är jag, syster, 
 din sorg att båda, 
 ty nödtvungen jag 
@@ -306,7 +375,9 @@ som bodde i världen,
 som alla hövdingar 
 på halsen stod.»
 
-Sigrun sade: 
+Sigrun sade:
+
+[verse]
 31 »Dig skola alla 
 eder bita, 
 som du hade 
@@ -316,6 +387,7 @@ lysande vatten
 och vid Vågens 
 våta sten.
 
+[verse]
 32. Segle ej det skepp, 
 som seglar med dig, 
 fast förlig vind 
@@ -325,6 +397,7 @@ som löper med dig,
 fast för fiender 
 du flykta skall!
 
+[verse]
 33. Bite ej det svärd, 
 som svänges av dig, 
 om ej dig själv 
@@ -338,7 +411,9 @@ och all gamman
 och föda ej finge, 
 om de fallne du ej åte.»
 
-Dag sade: 
+Dag sade:
+
+[verse]
 34. »Vansinnig, syster, 
 och från vettet du är, 
 då du önskar ofärd 
@@ -348,6 +423,7 @@ allt ont vållar,
 ty mellan släktingar 
 söndring han stiftat.
 
+[verse]
 35. Din broder röda 
 ringar dig bjuder, 
 hela Vandilsve 
@@ -357,7 +433,9 @@ till bot för din sorg,
 du smyckade brud, 
 jämte sönerna dina!»
 
-Sigrun sade: 
+Sigrun sade:
+
+[verse]
 36. »Så säll jag ej sitter 
 vid Sevafjällen, 
 arla eUer särla, 
@@ -369,6 +447,7 @@ med hövdingen löper,
 guldbetslade fålen, 
 och ej fursten jag hälsar.
 
+[verse]
 37. Så hade Helge 
 hållit i rädsla 
 sina fiender alla 
@@ -378,6 +457,7 @@ för vargen springa,
 fuUa av fasa, 
 från fjället ned.
 
+[verse]
 38. Helge så högt 
 över hövdingar stod 
 som ädelformad 
@@ -389,9 +469,12 @@ högre än alla
 och hornen glänsa 
 mot himmelen själv.»
 
-En hög gjordes efter Helge. Men när han kom till Valhall, då bjöd honom Oden att råda över allt jämte sig.
+En hög gjordes efter Helge.
+Men när han kom till Valhall, då bjöd honom Oden att råda över allt jämte sig.
 
-Helge sade: 
+Helge sade:
+
+[verse]
 39. »Åt männen alla 
 måste du, Hunding, 
 fotbad bära 
@@ -403,7 +486,9 @@ förrn till sängs du går.»
 
 Sigruns tjänstekvinna gick om aftonen vid Helges hög och såg, att Helge red till högen med många män.
 
-Tjänstekvinnan sade: 
+Tjänstekvinnan sade:
+
+[verse]
 40. »Är blott svek den syn, 
 som se jag tycker mig, 
 eller ragnarök. 
@@ -413,7 +498,9 @@ hästarne edra,
 eller har åt hövdingar 
 hemlov givits?»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 41. »Ej blott svek är den syn, 
 som se du tycker dig, 
 ej åldrarnes ände, 
@@ -425,6 +512,7 @@ hemlov givits.»
 
 Hem gick tjänstekvinnan och sade till Sigrun:
 
+[verse]
 42. »Gå ut, du Sigrun 
 från Sevafjällen, 
 om dig lyster att folkets 
@@ -438,6 +526,7 @@ du stilla skulle.»
 
 Sigrun gick in i högen till Helge och sade:
 
+[verse]
 43. »Nu gläder mig så mycket, 
 att vi mött varandra, 
 som Odens hungrande 
@@ -447,6 +536,7 @@ varma stekar
 eller dagens gryning 
 daggstänkta se.
 
+[verse]
 44. Dig vill jag kyssa, 
 döde konung, 
 förr än du blodiga 
@@ -460,7 +550,9 @@ på Hognes måg.
 Huru skall bättring 
 din brud åt dig vinna?
 
-Helge sade: 
+Helge sade:
+
+[verse]
 45. »Ensam du, Sigrun, 
 från Sevafjallen, 
 vållar, att Helge 
@@ -474,6 +566,7 @@ på bröstet av fursten,
 iskall, inbränd, 
 av ångest fylld.
 
+[verse]
 46. Dock kom, låt oss dricka 
 kostliga drycken, 
 fast livslust och land 
@@ -489,6 +582,7 @@ hos oss fallna är.»
 
 Sigrun redde en säng i högen.
 
+[verse]
 47. »Här har jag bäddat 
 dig, Helge, en säng, 
 som från ängslan är fri, 
@@ -498,7 +592,9 @@ du furste, somna,
 som hos levande hjälten 
 jag göra skulle.»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 48. »Nu säger jag intet 
 oväntat vara 
 sent eller tidigt 
@@ -510,6 +606,7 @@ Hognes dotter;
 är dock kvar i livet, 
 du konungborna.
 
+[verse]
 49. Tid är mig att rida 
 rodnande vägar, 
 låta bleka fålen 
@@ -519,8 +616,11 @@ om vindhemmets bro,
 förrän Salgovner 
 segerhjältar väcker.»
 
-Helge och hans följe redo sin väg, men Sigrun och tärnan gingo hem till gården. Andra aftonen lät Sigrun tärnan hålla vakt på högen. Men i skymningen, då Sigrun kom till högen, sade hon:
+Helge och hans följe redo sin väg, men Sigrun och tärnan gingo hem till gården.
+Andra aftonen lät Sigrun tärnan hålla vakt på högen.
+Men i skymningen, då Sigrun kom till högen, sade hon:
 
+[verse]
 50. »Kommen vore nu, 
 om komma han tänkte, 
 Sigmunds son 
@@ -534,6 +634,7 @@ till drömmarnes ting.
 
 image:ed0029.jpg[]
 
+[verse]
 51. Var ej avvita nog 
 att ensam färdas, 
 du sköldungars dis, 
@@ -543,16 +644,35 @@ mö, om natten
 alla dödas vålnader 
 än i dagens ljus.»
 
-Sigrun blev kortlivad av sorg och bedrövelse. Det var en tro i forntiden, att människor föddes på nytt, men det kallas nu käringprat. Helge och Sigrun påstås hava blivit återfödda; han hette då Helge Haddingjaskate och hon Kara Halvdansdotter, såsom säges i Karoljod, och hon var valkyria.
+Sigrun blev kortlivad av sorg och bedrövelse.
+Det var en tro i forntiden, att människor föddes på nytt, men det kallas nu käringprat.
+Helge och Sigrun påstås hava blivit återfödda; han hette då Helge Haddingjaskate och hon Kara Halvdansdotter, såsom säges i Karoljod, och hon var valkyria.
 
 == Om Sinfjotles död
 
-Sigmund Volsungsson var konung i Frankland; Sinfjotle var den äldste av hans söner, den andre var Helge, den tredje Hamund. Borghild, Sigmunds hustru, hade en broder, som hette ....... Men Sinfjotle, hennes styvson, och ....... friade båda till samma kvinna, och för den skull dödade honom Sinfjotle. Men när han kom hem, bad Borghild honom fara bort, men Sigmund bjöd henne penningar i böter, och dem måste hon mottaga. Men vid arvölet bar Borghild fram öl; hon tog gift, ett stort horn fullt, och bar fram åt Sinfjotle, men när han såg i hornet, urskilde han, att gift var i det, och sade till Sigmund: »Grumlig är drycken, gamlefar!» Sigmund tog hornet och drack ur. Det säges, att Sigmund var så hård, att gift varken kunde skada honom utvärtes eller invärtes, men alla hans söner uthärdade gift utanpå huden. Borghild bar ett annat horn åt Sinfjotle och bad honom dricka, och allt gick som förut. Och den tredje gången bar hon hornet till honom och sade stickord, om han ej drucke därur. Han sade åter som förut till Sigmund. Han sade: »Låt skägget sila det, son!» Sinfjotle drack och blev genast död.
+Sigmund Volsungsson var konung i Frankland; Sinfjotle var den äldste av hans söner, den andre var Helge, den tredje Hamund.
+Borghild, Sigmunds hustru, hade en broder, som hette .......
+Men Sinfjotle, hennes styvson, och .......
+friade båda till samma kvinna, och för den skull dödade honom Sinfjotle.
+Men när han kom hem, bad Borghild honom fara bort, men Sigmund bjöd henne penningar i böter, och dem måste hon mottaga.
+Men vid arvölet bar Borghild fram öl; hon tog gift, ett stort horn fullt, och bar fram åt Sinfjotle, men när han såg i hornet, urskilde han, att gift var i det, och sade till Sigmund: »Grumlig är drycken, gamlefar!» Sigmund tog hornet och drack ur.
+Det säges, att Sigmund var så hård, att gift varken kunde skada honom utvärtes eller invärtes, men alla hans söner uthärdade gift utanpå huden.
+Borghild bar ett annat horn åt Sinfjotle och bad honom dricka, och allt gick som förut.
+Och den tredje gången bar hon hornet till honom och sade stickord, om han ej drucke därur.
+Han sade åter som förut till Sigmund.
+Han sade: »Låt skägget sila det, son!» Sinfjotle drack och blev genast död.
 
-Sigmund bar honom långa vägar i famnen på sig och kom till en smal och lång fjord, och där var en liten farkost och en man på; han erbjöd Sigmund att bli rodd över fjorden. Men när Sigmund bar liket ut på farkosten, var båten lastad; mannen sade, att Sigmund skulle färdas innanför fjordens ända. Mannen stötte ut farkosten och försvann genast.
+Sigmund bar honom långa vägar i famnen på sig och kom till en smal och lång fjord, och där var en liten farkost och en man på; han erbjöd Sigmund att bli rodd över fjorden.
+Men när Sigmund bar liket ut på farkosten, var båten lastad; mannen sade, att Sigmund skulle färdas innanför fjordens ända.
+Mannen stötte ut farkosten och försvann genast.
 
-Konung Sigmund stannade länge i Danmark i Borghilds rike, sedan han äktat henne. Sedan for Sigmund söder till Frankland till det rike, som han hade där. Då äktade han Hjordis, dotter till konung Eylime; deras son var Sigurd. Konung Sigmund föll i strid mot Hundings söner, men Hjordis gifte sig då med Alf, son till konung Hjalprek. Sigurd växte upp där i barndomen.
+Konung Sigmund stannade länge i Danmark i Borghilds rike, sedan han äktat henne.
+Sedan for Sigmund söder till Frankland till det rike, som han hade där.
+Då äktade han Hjordis, dotter till konung Eylime; deras son var Sigurd.
+Konung Sigmund föll i strid mot Hundings söner, men Hjordis gifte sig då med Alf, son till konung Hjalprek.
+Sigurd växte upp där i barndomen.
 
-Sigmund och alla hans söner voro långt framom alla andra män i kraft och storlek och mod och all idrott. Sigurd var dock främst av alla, och honom säga alla i fornsagorna stå framför alla och vara den ansenligaste av härkonungar.
+Sigmund och alla hans söner voro långt framom alla andra män i kraft och storlek och mod och all idrott.
+Sigurd var dock främst av alla, och honom säga alla i fornsagorna stå framför alla och vara den ansenligaste av härkonungar.
 
 image:ed0030.jpg[]
