--- a/nivelungarnes.adoc
+++ b/nivelungarnes.adoc
@@ -1,6 +1,7 @@
 = Nivlungarnes dråp
 
-Gunnar och Hogne togo då allt guldet, Favners arv. Ofrid var då mellan gjukungarne och Atle; han tillskrev gjukungarne skulden till Brynhilds död.
+Gunnar och Hogne togo då allt guldet, Favners arv.
+Ofrid var då mellan gjukungarne och Atle; han tillskrev gjukungarne skulden till Brynhilds död.
 Till förlikning bestämdes, att de skulle gifta Gudrun med honom, och de gåvo henne glömskedryck att dricka, innan hon jakade till att gifta sig med Atle.
 Atles söner voro Erp och Eitil, men Svanhild var Sigurds och Gudruns dotter.
 Konung Atle bjöd hem Gunnar och Hogne och sände Vinge eller Knefröd.
