--- a/helge.adoc
+++ b/helge.adoc
@@ -2,15 +2,18 @@
 
 == Om Hjorvard och Sigrlinn.
 
-Hjorvard hette en konung. Han hade fyra hustrur: en hette Alvhild, deras son hette Hedin, den andra hette Säreid, deras son hette Humlung, den tredje hette Sinriod, deras son hette Hymling.
+Hjorvard hette en konung.
+Han hade fyra hustrur: en hette Alvhild, deras son hette Hedin, den andra hette Säreid, deras son hette Humlung, den tredje hette Sinriod, deras son hette Hymling.
 Konung Hjorvard hade avlagt löfte om att äga den vackraste kvinna, som han visste.
 Han fick veta, att konung Svavner hade den allra fagraste dotter, hon hette Sigrlinn.
 Idmund hette hans jarl; Atle var deras son, som for att bedja om Sigrlinn åt konungen.
 Han dröjde en vinter hos konung Svavner.
 Franmar hette jarlen där, Sigrlinns fosterfader; hans dotter hette Alov.
-Jarlen rådde, att flickan nekades, och Atle for hem. Atle, jarlens son, stod en dag vid en lund och en fågel satt uppe i grenarne över honom och hade hört, att hans män sade de kvinnor vara vackrast, som konung Hjorvard hade till äkta.
+Jarlen rådde, att flickan nekades, och Atle for hem.
+Atle, jarlens son, stod en dag vid en lund och en fågel satt uppe i grenarne över honom och hade hört, att hans män sade de kvinnor vara vackrast, som konung Hjorvard hade till äkta.
 Fågeln kvittrade och Atle lyssnade på vad han talade; han sade:
 
+[verse]
 1. »Såg du Sigrlinn, 
 Svavners dotter, 
 den fagraste mö 
@@ -20,19 +23,25 @@ tyckas för männen
 de hustrur, som Hjorvard 
 har i Glasislund.»
 
-Atle sade: 
+Atle sade:
+
+[verse]
 2. »Skall du med Atle, 
 Idmunds son, 
 mångvise fågel, 
 mera tala?»
 
-Fågeln sade: 
+Fågeln sade:
+
+[verse]
 »Jag skall, om blott ädlingen 
 offra åt mig ville, 
 och jag får kora, vad jag vill, 
 ur konungens gård.»
 
-Atle sade: 
+Atle sade:
+
+[verse]
 3. »Kora ej Hjorvard 
 och ej konungens söner, 
 ej heller furstens 
@@ -42,7 +51,9 @@ som kungen äger!
 Blivom väl överens, 
 som vänner pläga!»
 
-Fågeln sade: 
+Fågeln sade:
+
+[verse]
 4. »Tempel skall jag välja, 
 talrika altaren, 
 guldhornade kor 
@@ -54,6 +65,7 @@ fursten hem.»
 
 Detta var, innan Atle for, men när han kom hem och konungen sporde honom om nyheter, sade han:
 
+[verse]
 5. »Möda jag haft 
 men har målet ej nått; 
 vara hästar tröttnade 
@@ -65,10 +77,19 @@ om Svavners dotter,
 den med ringar utstyrda, 
 som vi erhålla ville.»
 
-Konungen bad, att de skulle fara en gång till, och han for själv med. När de kommo upp på fjället, sågo de i Svavaland brinnande byar och dammoln av hästar. Konungen red ned av fjället och fram i landet och tog nattkvarter vid en å. Atle höll vakt och for över ån; han fann ett hus. En stor fågel satt på huset och vaktade och hade somnat. Atle sköt fågeln till döds med sitt spjut men i huset fann han Sigrlinn, konungens dotter, och Alov, jarlens dotter, och tog dem båda med sig bort. Franmar jarl hade skapat sig i örnhamn och värjt dem för hären med trolldom. Rodmar hette en konung, som friade till Sigrlinn; han dödade svavernas konung och hade härjat och bränt landet. Konung Hjorvard fick Sigrlinn till hustru och Atle Alov.
+Konungen bad, att de skulle fara en gång till, och han for själv med.
+När de kommo upp på fjället, sågo de i Svavaland brinnande byar och dammoln av hästar.
+Konungen red ned av fjället och fram i landet och tog nattkvarter vid en å.
+Atle höll vakt och for över ån; han fann ett hus.
+En stor fågel satt på huset och vaktade och hade somnat.
+Atle sköt fågeln till döds med sitt spjut men i huset fann han Sigrlinn, konungens dotter, och Alov, jarlens dotter, och tog dem båda med sig bort.
+Franmar jarl hade skapat sig i örnhamn och värjt dem för hären med trolldom.
+Rodmar hette en konung, som friade till Sigrlinn; han dödade svavernas konung och hade härjat och bränt landet.
+Konung Hjorvard fick Sigrlinn till hustru och Atle Alov.
 
 Hjorvard och Sigrlinn hade en son, som var stor och vacker; han var tyst och intet namn fäste sig vid honom. Han satt på en hög, han såg nio valkyrior rida och en av dem var ansenligast; hon sade:
 
+[verse]
 6. »Sent skall du, Helge, 
 du höge hjälte, 
 råda över ringar 
@@ -78,7 +99,9 @@ om du alltid tiger,
 fast ett hårt sinne 
 du, härskare, visar.»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 7. »Vad gåva följer 
 att fästa namnet Helge, 
 du bländande brud, 
@@ -88,7 +111,9 @@ vad du vill säga;
 det tar jag ej emot, 
 om ej dig jag får.»
 
-Valkyrian sade: 
+Valkyrian sade:
+
+[verse]
 8. »Svärd vet jag ligga 
 i Sigarsholm 
 fyra färre 
@@ -98,6 +123,7 @@ av alla är bäst,
 skärande sköld 
 och skimrande av guld.
 
+[verse]
 9. Ring är i fästet, 
 friskt mod i mitten, 
 skräck för ägarn 
@@ -110,7 +136,9 @@ stjärten.»
 
 Eylime hette en konung; hans dotter var Svava, hon var valkyria och red genom luft och över hav; hon gav Helge detta namn och skyddade honom sedan ofta i strider.
 
-Helge sade: 
+Helge sade:
+
+[verse]
 10. »En insiktsfull konung, 
 är du ej, Hjorvard, 
 du fylkingars främste, 
@@ -120,6 +148,7 @@ furstars bygder,
 som mot dig intet 
 ont gjorde.
 
+[verse]
 11. Men Rodmar 
 råda skall för ringar, 
 som våra fränder 
@@ -134,7 +163,9 @@ Då uppsökte Helge svärdet, som Svava visade honom till, därpå foro han och 
 Han dräpte jätten Hate, där han satt på ett berg.
 Helge och Atle lågo med sina skepp i Hatafjorden; Atle höll vakt den förra delen av natten.
 
-Rimgärd, Hates dotter, sade: 
+Rimgärd, Hates dotter, sade:
+
+[verse]
 12 »Vilka härmän äro 
 i Hatafjorden; 
 med sköldar är tältat på skeppen. 
@@ -142,7 +173,9 @@ Raska ni visa er,
 rädas ej, tror jag. 
 Nämnen mig konungens namn!»
 
-Atle sade: 
+Atle sade:
+
+[verse]
 13. Helge han heter, 
 men härskarn du ej 
 makt har att men vålla; 
@@ -150,7 +183,9 @@ järnskydd äro
 kring hjältens flotta, 
 oss tillfoga trollkvinnor intet.»
 
-Rimgärd sade: 
+Rimgärd sade:
+
+[verse]
 14. »Hur kallar du dig, 
 du karl så stark, 
 hur nämna dig männen vid namn? 
@@ -158,7 +193,9 @@ Fursten på dig litar
 då han låter dig på skeppet 
 i fagra stäven stå.»
 
-Atle sade: 
+Atle sade:
+
+[verse]
 15. »Atle jag heter, 
 ettrig skall jag dig vara, 
 jättekvinnor göra mig gramse; 
@@ -166,6 +203,7 @@ den våta stäven
 jag värnat ofta 
 och kvällens trollpackor kvalt.
 
+[verse]
 16. Vad heter du, häxa, 
 hungrig efter lik? 
 Tälj oss, troll, om din fader! 
@@ -173,7 +211,9 @@ Nio mil skulle
 längre ned du vara, 
 Må barrskog växa på din barm!»
 
-Rimgärd sade: 
+Rimgärd sade:
+
+[verse]
 17. »Rimgard jag heter 
 och Hate min fader, 
 den väldigaste jätte jag vetat; 
@@ -181,7 +221,9 @@ många brudar
 från bostaden tog han, 
 tills Helge ihjäl honom högg.»
 
-Atle sade: 
+Atle sade:
+
+[verse]
 18. »Du var, häxa, 
 framför hövdingens skepp, 
 i fjordmynnet låg du på lur. 
@@ -189,7 +231,9 @@ Du hövdingens hjältar
 ville giva åt Ran, 
 om ej spjutet dig i valköttet sprungit.»
 
-Rimgärd sade: 
+Rimgärd sade:
+
+[verse]
 19. »Dårad är du, Atle, 
 drömma jag tror dig, 
 du sänker dina ögonbryn i sömn; 
@@ -198,6 +242,7 @@ framför milde furstens skepp,
 jag sänkte Lodvards 
 söner i sjön.
 
+[verse]
 20. Gnägga skulle du, Atle, 
 om ej utskuren du vore, 
 Rimgärd sätter rumpan i vädret. 
@@ -205,7 +250,9 @@ Baktill, Atle,
 ej i bröstet är ditt hjärta, 
 fast en hingst du låter likt.»
 
-Atle sade: 
+Atle sade:
+
+[verse]
 21. »Som en hingst jag skall dig synas, 
 om försöka du kan 
 och från sjön jag stiger å strand. 
@@ -213,7 +260,9 @@ Du slås sönder och samman,
 om sinnet rinner på mig, 
 och får sänka, Rimgärd, din svans.»
 
-Rimgärd sade: 
+Rimgärd sade:
+
+[verse]
 22. »Gå i land då, Atle, 
 om du litar på din styrka, 
 låt oss träffas i Varins vik! 
@@ -221,7 +270,9 @@ Revbenen, karl,
 skall du rätade få, 
 om du kommer i klorna på mig.»
 
-Atle sade: 
+Atle sade:
+
+[verse]
 23. »Härifrån jag ej går, 
 förrän folket vaknar 
 och håller om hövdingen vakt. 
@@ -229,7 +280,9 @@ Troligt nog är,
 att en trollkvinna kommer 
 och skjuter upp under vårt skepp.»
 
-Rimgärd sade: 
+Rimgärd sade:
+
+[verse]
 24. »Vakna du, Helge, 
 och vedergäll Rimgärd, 
 att Hate ned du högg. 
@@ -237,7 +290,9 @@ Får en enda natt
 hos ädlingen hon sova, 
 är bot för oförrätt bragt.
 
-Helge sade: 
+Helge sade:
+
+[verse]
 25. »Han heter Luden, som får dig, 
 led är du för mankön, 
 den tursen i Tollö bor; 
@@ -245,7 +300,9 @@ en den visaste jätte,
 den värste av bergfolket, 
 åt dig lagom han sig lämpar till man.»
 
-Rimgärd sade: 
+Rimgärd sade:
+
+[verse]
 26. »Henne vill du hellre ha, 
 som hamnarne granskade 
 den förra natten bland folket, 
@@ -257,7 +314,9 @@ Hon ensam vållar,
 att jag icke kan 
 furstens män bliva till bane.»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 27. »Hör du, Rimgärd, 
 om jag håller dig skadeslös, 
 säg till fullo för fursten! 
@@ -265,7 +324,9 @@ Var hon ensam, som frälste
 furstens skepp 
 eller foro de flera till samman?»
 
-Rimgärd sade: 
+Rimgärd sade:
+
+[verse]
 28. »Tre flockar av nio, 
 dock främst av dem 
 red en mö under hjälmen mjällvit; 
@@ -276,7 +337,9 @@ hagel i höga skogar,
 det giver åt jorden gott år; 
 led var mig den syn, jag såg.»
 
-Atle sade: 
+Atle sade:
+
+[verse]
 29. »Se nu österut, Rimgärd, 
 om dig råkat har 
 Helge med död och fördärv. 
@@ -284,6 +347,7 @@ På hav och på land
 är härskarens flotta bärgad 
 och furstens män ej mindre.
 
+[verse]
 30. Dager är nu, Rimgärd, 
 men dig har Atle 
 till döds med samtal sinkat. 
@@ -302,7 +366,9 @@ Om kvällen avlades löften.
 Offergalten leddes fram, männen lade sina händer på honom och avlade sina löften vid bragebägaren.
 Hedin avlade löfte att vinna Svava, Eylimes dotter, sin broder Helges käresta, och ångrade sig så mycket, att han gick bort på villande stigar söderut i landet och träffade sin broder Helge.
 
-Helge sade: 
+Helge sade:
+
+[verse]
 31. »Välkommen, Hedin! 
 Vad kan du säga 
 för nyheter 
@@ -312,7 +378,9 @@ driven ur landet
 och har ensam kommit 
 oss att träffa?»
 
-Hedin sade: 
+Hedin sade:
+
+[verse]
 32. »Mig mycket större 
 missgärning råkat 
 (än dig broder 
@@ -322,7 +390,9 @@ den konungborna
 bruden din 
 vid bragebägarn.»
 
-Helge sade: 
+Helge sade:
+
+[verse]
 33, »Giv dig ej sak! 
 Sant skall bliva 
 bragelöftet, Hedin, 
@@ -336,7 +406,9 @@ om jag återkommer;
 då kan sådant i godo 
 gå, om det ske skall.»
 
-Hedin sade: 
+Hedin sade:
+
+[verse]
 34. »Sade du, Helge, 
 att Hedin vore 
 värd gott från dig 
@@ -347,6 +419,8 @@ att bloda ditt svärd
 frid att giva.»
 
 Då sade Helge: 
+
+[verse]
 35. »På varg en kvinna 
 i kvällsskymning red, 
 som bad Hedin 
@@ -361,6 +435,7 @@ Detta sade Helge, emedan han anade sin förestående död och att hans fylgjor h
 Alf hette den konung, son till Rodmar, som hade hasslat in en valplats åt Helge på Sigarsslätten med tre nätters frist.
 Där var en stor strid, och Helge fick där banesår.
 
+[verse]
 36. Helge sände 
 Sigar att rida 
 efter Eylimes 
@@ -370,7 +445,9 @@ redo bliva,
 om hon vill finna, 
 fursten vid liv!»
 
-Sigar sade: 
+Sigar sade:
+
+[verse]
 37. »Mig haver Helge 
 hit sänt 
 att söka samtal, 
@@ -380,7 +457,9 @@ gärna träffa,
 innan den ädelborne 
 andan uppgav.»
 
-Svava sade: 
+Svava sade:
+
+[verse]
 38. »Hur gick det med Helge 
 Hjorvards son. 
 Hårt av sorg 
@@ -390,7 +469,9 @@ om svärd honom bitit;
 åt gärningsmannen gengäld 
 jag giva skall.»
 
-Sigar sade: 
+Sigar sade:
+
+[verse]
 39. »Här föll på morgonen 
 vid Frekastenen 
 den bäste furste, 
@@ -403,7 +484,9 @@ till gagn ej var.»
 .Helge, Svava och Sigar
 image::ed0027.jpg[]
 
-Helge sade: 
+Helge sade:
+
+[verse]
 40. »Hell dig, Svava! 
 Sorg dig väntar. 
 Vi se varann i världen 
@@ -413,6 +496,7 @@ ur furstens sår;
 svärdet trängde 
 tätt intill hjärtat.
 
+[verse]
 41. Jag beder dig, Svava, 
 - min brud, gråt icke - 
 om du vill min 
@@ -422,7 +506,9 @@ hängiver dig
 och unge fursten 
 ömt älskar.»
 
-Svava sade: 
+Svava sade:
+
+[verse]
 42. »Min menine jag sade 
 i Munarheim, 
 då Helge mig röda 
@@ -432,7 +518,9 @@ jag ej frivilligt skulle
 en oberömd furste 
 famna i kärlek.»
 
-Hedin sade: 
+Hedin sade:
+
+[verse]
 43. »Kyss mig, Svava! 
 Jag svär att ej komma 
 till Rogheim åter 
